--- a/main.css
+++ b/main.css
@@ -10,6 +10,6 @@
     background-color: #c0d0ff;
 }
 
-#view_part table tbody td:nth-child(even){
+#view_part table tbody tr:nth-child(even) td{
     background-color: #f0f0f0;
 }
